2013-11-11  Sergio Martin <sergio.martin@artica.es>

	* include/javascript/OpenLayers/OpenLayers.js: Fix layer
	order error that broke the zoom in google maps on GIS for 
	incident #370
	Merged from 4.1

2013-11-11  Sergio Martin <sergio.martin@artica.es>

	* include/functions_treeview.php: Fix the agents query in
	tree view of tags to avoid duplicated agents for
	incident #349

2013-11-07  Sergio Martin <sergio.martin@artica.es>

	* include/functions_events.php: Change the way of store
	the event comments (supporting old way)

	* include/functions_api.php: Improve API clean process
	of the csv output.

2013-11-07 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_api.php: fixed the validate event with the
	new validation form.

2013-11-07  Ramon Novoa  <rnovoa@artica.es>

	* godmode/agentes/modificar_agente.php: Fixed a duplicated id.

2013-11-06  Sergio Martin <sergio.martin@artica.es>

	* include/functions_api.php: Fix create event typo 
	errors in api. Fix sent by tomas in incident #347

2013-11-06  Sergio Martin <sergio.martin@artica.es>

	* include/constants.php
	include/functions_graph.php: Added color collection in
	constants file and use it in custom graphs to avoid
	ugly black colors in graphs with more than three graphs
	Incident #346

2013-11-05  Sergio Martin <sergio.martin@artica.es>

	* include/api.php: Create a special call on Pandora FMS
	API to verify if it is a correct installation of Pandora 
	and get the Version.
	This call only retrieve "Pandora FMS [version] - [build]"
	without any security check.

2013-11-05  Sergio Martin <sergio.martin@artica.es>

	* include/javascript/jquery.pandora.js: Fixed "press
	on scape" close event on enterprise dialog

2013-11-05  Sergio Martin <sergio.martin@artica.es>

	* include/functions_tags.php: Fix the tags acl 
	check function to be compatible with acl propagation
	incident #345

2013-11-04  Sergio Martin <sergio.martin@artica.es>

	* operation/tree.php: Truncate the name of agents